--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
         "axios": "^0.26.0",
         "bootstrap": "^5.1.3",
         "firebase": "^9.6.8",
+        "js-base64": "^3.7.2",
+        "jwt-decode": "^3.1.2",
+        "leaflet": "^1.7.1",
         "react": "^17.0.2",
         "react-bootstrap": "^2.2.0",
         "react-color": "^2.19.3",
+        "react-device-detect": "^2.1.2",
         "react-dom": "^17.0.2",
         "react-dropzone": "^12.0.4",
+        "react-flash-message": "^1.0.8",
+        "react-read-more-read-less": "^1.0.7",
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
+        "react-scroll": "^1.8.6",
         "react-slick": "^0.28.1",
+        "react-spring-bottom-sheet": "^3.4.0",
+        "redux-persist": "^6.0.0",
         "sass": "^1.49.9",
         "slick-carousel": "^1.8.1"
     },
@@ -43,5 +52,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "react-openlayers": "^0.3.0"
     }
 }
